--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,12 @@ body {
     height: inherit;
   }
 
+  tree {
+    display: block;
+    padding-bottom: 48px;
+
+  }
+
   tree-internal ul {
     padding: 3px 0 3px 15px;
   }
